--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,17 @@
 
 
     <dependencies>
+        <!-- Redis Spring Boot-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <!-- Redis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>4.2.3</version>
+        </dependency>
         <!--阿里云短信服务-->
         <dependency>
             <groupId>com.aliyun</groupId>
