--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,14 +4,40 @@ spring:
   application:
     #项目名称 可选
     name: reggie_take_out
-  datasource:
-    druid:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/reggie?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
-      username: root
-      password: 5261019zxglucky?
+  shardingsphere:
+    datasource:
+      names: master,slave
+      #主数据源
+      master:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://192.168.33.128:3306/reggie
+        username: root
+        password: 123456
+      #从数据源
+      slave:
+        type: com.alibaba.druid.pool.DruidDataSource
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://192.168.33.131:3307/reggie
+        username: root
+        password: 123456
+    masterslave:
+      #读写分离配置
+      load-balance-algorithm-type: round_robin #轮循
+      # 最终的数据源名称
+      name: dataSource
+      # 主数据源名称
+      master-data-source-name: master
+      # 从库数据源列表，多个逗号分割
+      slave-data-source-names: slave
+    props:
+      sql:
+        show: true #开启sql显示，默认flase
+  main:
+      allow-bean-definition-overriding: true
+
   redis:
-    host: localhost
+    host: 192.168.138.1
     port: 6379
     database: 0
     jedis:
@@ -20,6 +46,9 @@ spring:
         #max-wait: 1 #连接池最大等待时间
         max-idle: 4 #连接池中的最大空闲连接
         min-idle: 0 #连接池中的最小空闲连接
+  cache:
+    redis:
+      time-to-live: 18
 mybatis-plus:
   configuration:
     #选择是否开启驼峰命名法
@@ -29,4 +58,4 @@ mybatis-plus:
     db-config:
       id-type: auto
 reggie:
-  path: D:\迅雷下载\瑞吉外卖\1 瑞吉外卖项目\资料\图片资源
+  path: /usr/local/javaapp/img
